--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mr-landlord",
   "version": "0.1.0",
   "private": true,
+  "author": "Jenelyn Ababan",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,13 +14,21 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
+    "eslint-config-next": "^12.0.4",
+    "lodash": "^4.17.21",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
+    "tw-elements": "^1.0.0-beta2",
+    "twilio": "^4.12.0",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.195"
   }
 }
