--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "tailwindcss": "3.3.2",
     "tw-elements": "^1.0.0-beta2",
     "twilio": "^4.12.0",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.195"
