--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,12 +1,15 @@
-
 {
-    "*.ts": [
-      "prettier --write",
-      "eslint"
-    ],
-    "*.html": [
-      "eslint",
-      "prettier --write"
-    ],
-    "*.scss": "prettier --write"
-  }
+  "*.tsx": [
+    "prettier --write",
+    "eslint"
+  ],
+  "*.ts": [
+    "prettier --write",
+    "eslint"
+  ],
+  "*.html": [
+    "eslint",
+    "prettier --write"
+  ],
+  "*.scss": "prettier --write"
+}
