--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "configure-husky": "npx husky install && npx husky add .husky/pre-commit \"npx --no-install lint-staged\""
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "dependencies": {
     "@types/node": "20.3.2",
@@ -16,7 +22,6 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "eslint": "8.43.0",
     "eslint-config-next": "^12.0.4",
     "lodash": "^4.17.21",
     "next": "13.4.7",
@@ -27,12 +32,20 @@
     "tailwindcss": "3.3.2",
     "tw-elements": "^1.0.0-beta2",
     "twilio": "^4.12.0",
-    "typescript": "5.1.3",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.195",
-    "husky": "^8.0.0",
-    "lint-staged": "^13.2.3"
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "eslint": "^8.43.0",
+    "eslint-config-standard-with-typescript": "^35.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
+    "prettier": "^2.8.8",
+    "typescript": "^5.1.6"
   }
 }
