--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "clsx": "^1.2.1",
     "eslint-config-next": "^12.0.4",
     "lodash": "^4.17.21",
     "next": "13.4.7",
