--- a/package.json
+++ b/package.json
@@ -1,43 +1,56 @@
 {
-  "name": "mr-landlord",
-  "version": "0.1.0",
-  "private": true,
-  "author": "Jenelyn Ababan",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "20.3.2",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
-    "clsx": "^1.2.1",
-    "eslint-config-next": "^12.0.4",
-    "lodash": "^4.17.21",
-    "next": "13.4.7",
-    "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwind-merge": "^1.13.2",
-    "tailwindcss": "3.3.2",
-    "tw-elements": "^1.0.0-beta2",
-    "twilio": "^4.12.0",
-    "zustand": "^4.3.8"
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.14.195",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "eslint": "^8.43.0",
-    "eslint-config-standard-with-typescript": "^35.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.7.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.2",
-    "prettier": "^2.8.8",
-    "typescript": "^5.1.6"
-  }
+    "name": "mr-landlord",
+    "version": "0.1.0",
+    "private": true,
+    "author": "Jenelyn Ababan",
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@types/node": "20.3.2",
+        "@types/react": "18.2.14",
+        "@types/react-dom": "18.2.6",
+        "@typescript-eslint/parser": "^5.60.1",
+        "@typescript-eslint/typescript-estree": "^5.60.1",
+        "autoprefixer": "10.4.14",
+        "axios": "^1.4.0",
+        "clsx": "^1.2.1",
+        "eslint-config-next": "^12.0.4",
+        "lodash": "^4.17.21",
+        "next": "13.4.7",
+        "postcss": "8.4.24",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "tailwind-merge": "^1.13.2",
+        "tailwindcss": "3.3.2",
+        "tw-elements": "^1.0.0-beta2",
+        "twilio": "^4.12.0",
+        "zustand": "^4.3.8"
+    },
+    "devDependencies": {
+        "@types/lodash": "^4.14.195",
+        "@typescript-eslint/eslint-plugin": "^5.60.1",
+        "eslint": "^8.44.0",
+        "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-airbnb-typescript": "^17.0.0",
+        "eslint-config-prettier": "^8.4.0",
+        "eslint-config-standard-with-typescript": "^35.0.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
+        "eslint-plugin-n": "^15.7.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-react": "^7.27.0",
+        "eslint-plugin-react-hooks": "^4.3.0",
+        "eslint-plugin-security": "^1.4.0",
+        "eslint-plugin-simple-import-sort": "^7.0.0",
+        "eslint-plugin-sonarjs": "^0.12.0",
+        "husky": "^8.0.3",
+        "lint-staged": "^13.2.3",
+        "prettier": "^2.5.1",
+        "typescript": "^5.1.6"
+    }
 }
