--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   },
   "resolutions": {
     "@typescript-eslint/parser": "^1.11.0",
-    "@typescript-eslint/eslint-plugin": "^1.11.0"
+    "@typescript-eslint/eslint-plugin": "^1.11.0",
+    "@typescript-eslint/typescript-estree": "^5.59.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.195",
