--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "eslint-config-next": "^12.0.4",
+    "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
     "next": "13.4.7",
     "postcss": "8.4.24",
