--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "^12.0.4",
     "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "^18.2.0",
